trunk/Archive2/95/ebf479afe96a37/output
main.cpp:9:11: error: assigning to 'int *' from incompatible type 'bool'
    if (x = (int*)malloc(sizeof(int) * n) == NULL){
          ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:13:11: error: assigning to 'int *' from incompatible type 'bool'
    if (y = (int*)malloc(sizeof(int) * m) == NULL){
          ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:27:5: error: expected unqualified-id
    return 0;
    ^
main.cpp:28:1: error: extraneous closing brace ('}')
}
^
4 errors generated.
